--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
-  - "iojs"
   - "7"
-  
-install:
-  - npm install
-after_success:
--npm test
+before_script:
+  - npm install 
+
+after_script:
+  - npm test
